<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.eclipse.jetty.toolchain</groupId>
  <artifactId>jetty-toolchain</artifactId>
  <version>1.8-parent-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Jetty Toolchain :: Parent</name>
  <description>The Eclipse Jetty Toolchain Parent</description>
  <url>https://eclipse.org/jetty</url>
  <inceptionYear>1995</inceptionYear>

  <organization>
    <name>Mort Bay Consulting</name>
    <url>http://www.mortbay.com</url>
  </organization>

  <licenses>
    <license>
      <name>Apache Software License - Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
    <license>
      <name>Eclipse Public License - Version 1.0</name>
      <url>http://www.eclipse.org/org/documents/epl-v10.php</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>gregw</id>
      <name>Greg Wilkins</name>
      <email>gregw@apache.org</email>
      <url>http://www.mortbay.com/mortbay/people/gregw</url>
      <organization>Mort Bay Consulting</organization>
      <organizationUrl>http://www.mortbay.com</organizationUrl>
    </developer>
    <developer>
      <id>janb</id>
      <name>Jan Bartel</name>
      <email>janb@apache.org</email>
      <url>http://www.mortbay.com/people/janb</url>
      <organization>Mort Bay Consulting</organization>
      <organizationUrl>http://www.mortbay.com</organizationUrl>
    </developer>
    <developer>
      <id>jules</id>
      <name>Jules Gosnell</name>
      <email>jules@apache.org</email>
      <organization></organization>
    </developer>
    <developer>
      <id>jstrachan</id>
      <name>James Strachan</name>
      <email>jstrachan@apache.org</email>
      <organization>Logic Blaze</organization>
      <organizationUrl>http://www.logicblaze.com</organizationUrl>
    </developer>
    <developer>
      <id>sbordet</id>
      <name>Simone Bordet</name>
      <email>simone.bordet@gmail.com</email>
    </developer>
    <developer>
      <id>tvernum</id>
      <name>Tim Vernum</name>
      <email>tim@adjective.org</email>
      <organization></organization>
    </developer>
    <developer>
      <id>ngonzalez</id>
      <name>Nik Gonzalez</name>
      <email>ngonzalez@exist.com</email>
      <organization></organization>
    </developer>
    <developer>
      <id>jfarcand</id>
      <name>Jeanfrancois Arcand</name>
      <email>jfarcand@apache.org</email>
      <organization>Sun Microsystems</organization>
      <organizationUrl>http://www.sun.com</organizationUrl>
    </developer>
    <developer>
      <id>jesse</id>
      <name>Jesse McConnell</name>
      <email>jesse@webtide.org</email>
      <organization>Webtide, LLC</organization>
      <organizationUrl>http://www.webtide.com</organizationUrl>
      <timezone>-6</timezone>
    </developer>
    <developer>
      <id>djencks</id>
      <name>David Jencks</name>
      <email>david_jencks@yahoo.com</email>
      <organization>IBM</organization>
    </developer>
    <developer>
      <id>dyu</id>
      <name>David Yu</name>
      <email>david.yu.ftw@gmail.com</email>
      <organization>Webtide</organization>
      <organizationUrl>http://www.webtide.com</organizationUrl>
    </developer>
    <developer>
      <id>ayao</id>
      <name>Athena Yao</name>
      <email>yao.athena@gmail.com</email>
      <organization>Webtide</organization>
      <organizationUrl>http://www.webtide.com</organizationUrl>
    </developer>
    <developer>
      <id>joakime</id>
      <name>Joakim Erdfelt</name>
      <email>joakim@webtide.com</email>
      <organization>Webtide</organization>
      <organizationUrl>http://www.webtide.com</organizationUrl>
      <timezone>-7</timezone>
    </developer>
    <developer>
      <id>hmalphett</id>
      <name>Hugues Malphettes</name>
      <organization>Intalio.com</organization>
      <organizationUrl>http://www.intalio.com</organizationUrl>
      <timezone>-8</timezone>
    </developer>
    <developer>
      <id>mgorovoy</id>
      <name>Michael Gorovoy</name>
      <email>michael@webtide.com</email>
      <organization>Intalio Inc.</organization>
      <organizationUrl>http://www.intalio.com</organizationUrl>
      <timezone>-5</timezone>
    </developer>
  </developers>

  <mailingLists>
    <mailingList>
      <name>Jetty Developer Mailing List</name>
      <subscribe>https://dev.eclipse.org/mailman/listinfo/jetty-dev</subscribe>
      <unsubscribe>https://dev.eclipse.org/mailman/listinfo/jetty-dev</unsubscribe>
      <archive>http://dev.eclipse.org/mhonarc/lists/jetty-dev/maillist.html</archive>
    </mailingList>
    <mailingList>
      <name>Jetty Commit Mailing List</name>
      <subscribe>https://dev.eclipse.org/mailman/listinfo/jetty-commit</subscribe>
      <unsubscribe>https://dev.eclipse.org/mailman/listinfo/jetty-commit</unsubscribe>
      <archive>http://dev.eclipse.org/mhonarc/lists/jetty-commit/maillist.html</archive>
    </mailingList>
    <mailingList>
      <name>Jetty Users Mailing List</name>
      <subscribe>https://dev.eclipse.org/mailman/listinfo/jetty-users</subscribe>
      <unsubscribe>https://dev.eclipse.org/mailman/listinfo/jetty-users</unsubscribe>
      <archive>http://dev.eclipse.org/mhonarc/lists/jetty-users/maillist.html</archive>
    </mailingList>
    <mailingList>
      <name>Jetty Announce Mailing List</name>
      <subscribe>https://dev.eclipse.org/mailman/listinfo/jetty-announce</subscribe>
      <unsubscribe>https://dev.eclipse.org/mailman/listinfo/jetty-announce</unsubscribe>
      <archive>http://dev.eclipse.org/mhonarc/lists/jetty-announce/maillist.html</archive>
    </mailingList>
  </mailingLists>

  <scm>
    <connection>scm:git:https://github.com/jetty/${jetty.git.repo}.git</connection>
    <developerConnection>scm:git:git@github.com:eclipse/${jetty.git.repo}.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/jetty/${jetty.git.repo}</url>
  </scm>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/jetty/${jetty.git.repo}</url>
  </issueManagement>

  <distributionManagement>
    <repository>
      <id>oss.sonatype.org</id>
      <name>Jetty Staging Repository</name>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>oss.sonatype.org</id>
      <name>Jetty Snapshot Repository</name>
      <url>https://oss.sonatype.org/content/repositories/jetty-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <failIfNoTests>false</failIfNoTests>
    <forkCount>1</forkCount>
    <jetty.git.repo>jetty.toolchain</jetty.git.repo>
    <jetty.url>http://www.eclipse.org/jetty</jetty.url>
    <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <maven.dependency.plugin.version>3.6.1</maven.dependency.plugin.version>
    <maven.deploy.plugin.retryFailedDeploymentCount>10</maven.deploy.plugin.retryFailedDeploymentCount>
    <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
    <maven.gpg.plugin.version>3.1.0</maven.gpg.plugin.version>
    <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
    <maven.invoker.plugin.version>3.6.0</maven.invoker.plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.javadoc.plugin.version>3.6.0</maven.javadoc.plugin.version>
    <maven.release.plugin.version>3.0.1</maven.release.plugin.version>
    <maven.source.plugin.version>3.3.0</maven.source.plugin.version>
    <maven.surefire.argLine>-Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -XX:+PrintGCDetails -Djava.io.tmpdir=${project.build.directory}</maven.surefire.argLine>
    <maven.surefire.plugin.version>3.2.1</maven.surefire.plugin.version>
    <mavenPluginToolsVersion>3.5.2</mavenPluginToolsVersion>
    <mavenVersion>3.5.0</mavenVersion>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire.timeout>3600</surefire.timeout>
  </properties>

  <build>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven.dependency.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven.deploy.plugin.version}</version>
          <configuration>
            <retryFailedDeploymentCount>${maven.deploy.plugin.retryFailedDeploymentCount}</retryFailedDeploymentCount>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven.surefire.plugin.version</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${maven.gpg.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>${maven.install.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-invoker-plugin</artifactId>
          <version>${maven.invoker.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
          <configuration>
            <archive>
              <!-- Only needed if bundle/OSGi built out a manifest first
              <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                -->
              <manifestEntries>
                <Implementation-Version>${project.version}</Implementation-Version>
                <Implementation-Vendor>Eclipse.org - Jetty</Implementation-Vendor>
                <url>${jetty.url}</url>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${maven.javadoc.plugin.version}</version>
          <configuration>
            <failOnError>false</failOnError>
            <charset>UTF-8</charset>
            <docencoding>UTF-8</docencoding>
            <encoding>UTF-8</encoding>
            <docfilessubdirs>true</docfilessubdirs>
            <detectLinks>false</detectLinks>
            <detectJavaApiLink>false</detectJavaApiLink>
            <show>protected</show>
            <excludePackageNames>com.acme.*;org.slf4j.*;org.mortbay.*</excludePackageNames>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven.release.plugin.version}</version>
          <configuration>
            <useReleaseProfile>false</useReleaseProfile>
            <goals>deploy</goals>
            <arguments>-Peclipse-release</arguments>
            <preparationGoals>clean install</preparationGoals>
            <mavenExecutorId>forked-path</mavenExecutorId>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven.source.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <configuration>
            <argLine>${maven.surefire.argLine}</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.39.0</version>
        <configuration>
          <pom>
            <includes>
              <include>pom.xml</include>
            </includes>
            <sortPom>
              <nrOfIndentSpace>2</nrOfIndentSpace>
              <!-- default see https://github.com/Ekryd/sortpom/wiki/PredefinedSortOrderProfiles -->
              <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
              <!-- Sort properties -->
              <sortProperties>true</sortProperties>
              <!-- Sort modules -->
              <!--              <sortModules>true</sortModules>-->
              <!-- Sort plugin executions -->
              <sortExecutions>true</sortExecutions>
              <!-- Sort dependencies see https://github.com/Ekryd/sortpom/wiki/SortDependencies -->
              <sortDependencies>scope,groupId,artifactId</sortDependencies>
              <!-- Sort dependency exclusions -->
              <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
              <!-- Sort plugins: https://github.com/Ekryd/sortpom/wiki/SortPlugins -->
              <sortPlugins>groupId,artifactId</sortPlugins>
            </sortPom>
          </pom>
          <upToDateChecking>
            <enabled>true</enabled>
          </upToDateChecking>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdk9</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <additionalOptions>
                <additionalOption>-html5</additionalOption>
              </additionalOptions>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>eclipse-release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <goals>
                  <goal>sign</goal>
                </goals>
                <phase>verify</phase>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>

</project>
